# bookbot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.test  LICENSE  Makefile  README.md  docker-compose.yml  main.py  main_two.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
api/: main.py  requirements.txt
src/bookbot/: __init__.py  analyzer.py  cli.py  exporter.py  readers.py  report.py  sentiment.py  utils.py  visualizer.py
tests/: __init__.py  test_analyzer.py  test_report.py
web/: Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: CharFrequencyChart.tsx  FileUpload.tsx  RawInputStream.tsx  RecentFiles.tsx  Sidebar.tsx  StatsCards.tsx
