[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookbot"
version = "1.0.0"
description = "Professional text analysis tool for books and documents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "David Benito Campo"}
]
keywords = ["text analysis", "books", "nlp", "word frequency", "reading statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
visualize = [
    "matplotlib>=3.5.0",
    "wordcloud>=1.8.2",
]
pdf = [
    "PyPDF2>=3.0.0",
]
epub = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
    "flake8>=5.0.0",
]
sentiment = [
    "textblob>=0.17.0",
    "nltk>=3.8.0",
]
all = [
    "bookbot[visualize,pdf,epub,sentiment,dev]",
]



[project.scripts]
bookbot = "bookbot.cli:main"

[project.urls]
Homepage = "https://github.com/DavidBenitoCampo/bookbot"
Documentation = "https://github.com/DavidBenitoCampo/bookbot#readme"
Repository = "https://github.com/DavidBenitoCampo/bookbot.git"
Issues = "https://github.com/DavidBenitoCampo/bookbot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/bookbot"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
